--- a/src/Blazor.Server.UI/appsettings.json
+++ b/src/Blazor.Server.UI/appsettings.json
@@ -19,12 +19,12 @@
   },
   "DashbordSettings": {
     "Version": "4.3.2",
-    "App": "Visitor",
+    "App": "SecurityOne",
     "AppName": "Visitor Management",
     "AppFlavor": "Blazor .NET 6.0",
     "AppFlavorSubscript": ".NET 6.0",
-    "Company": "BLAZOR",
-    "Copyright": "@2022 Copyright",
+    "Company": "SecurityOne",
+    "Copyright": "Safety first @2022 Copyright",
   },
   "AllowedHosts": "*",
   "MailSettings": {
@@ -34,7 +34,7 @@
     "Port": 25,
     "UserName": "28440117@qq.com",
     "Password": "docbhteyucvpbhjb", //"docbhteyucvpbhjb", //"oavrggntlyywbijc" "new163:NVCDPMPARPLJKQDU",
-    "DisplayName": "visitor management"
+    "DisplayName": "SecurityOne Visitor Management System"
   },
   "Serilog": {
     "MinimumLevel": {
